project/stage/semantic_tests/reject/index_undefined_assign.ul
void main() {
    notarr[foo()] = 0;
}
int foo(){
    return 0;
}
